      files instead;
    - no longer pass --sourcedir=debian/tmp to dh_install.
  * Implement autodiscovery of mono L_PATHS and generally try to hardcode as
    less mono paths as possible.
  * Get rid of useless cdbs include and build dependency.
  * Use simplier approach for debian/rules binary-* target handling.
  * Run dh_installdirs in install-pre target to make mono helpers more silent.

  !! DISCLAIMER !! Changes below are sort of "not really sure what I was doing".

  * Add patches:
    - 06_build_smokephonon.diff - much smoke stuff needs phononsmoke, but that
      one was disabled because it didn't build. Reenable it and hack around its
      brokenness which probably results into useless smokephonon, but working
      builds of other smoke stuff.
    - 08_csharp_plasma_examples.diff - do not build a few csharp plasma
      examples. They fail.
  * A few files disappeared.

   +++ Changes by David Palacio:

  * Build Ruby Nepomuk bindings (09_build_ruby_nepomuk.diff).

  +++ Changes by Scott Kitterman:

  * Change mono build-dep to mono-devel (>= 2.0.1) for mono 2.0 transition

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 31 Dec 2008 04:09:13 +0200

kdebindings (4:4.1.3-2) experimental; urgency=low

  [ Vincent Fourmond ]
  * Moving libqt4-ruby{,1.8} to section interpreters where they
    currently are (to avoid override disparities)
  * Dropping a libsmokeqt4 dependency that prevent some packages from 
    being installed. (closes: #505274)
  * libqt4-ruby, libkde4-ruby, libplasma-ruby, libokular-ruby are arch:all
  * Copying test files from old libqt4-ruby package
  * 05_rbqtapi_ruby1.8.diff: rbqtapi must use ruby 1.8 rather than ruby
  * Various minor Description improvements
  * Fixing download links (debian/copyright, debian/watch, thanks 
    ana@debian.org)
  * Tighten up dependencies on libsmokeqt4-2 and derivatives, as soname
    of smoke is not really a soname, so we can't expect dpkg-shlibs