@@ -124,6 +124,7 @@ clean:: unpatch
 	
 	rm -f build-stamp
 	rm -f build-stamp-*
+	rm -f debian/cdbs-install-list debian/cdbs-package-list
 	rm -rf $(objdir)
 	rm -rf $(MONOHOME)
 	
@@ -193,3 +194,23 @@ binary-indep binary-arch: build install
 ##
 
 .PHONY: build clean install binary binary-arch binary-indep binary-common
+
+##### List missing implementation from CDBS #####
+
+DEB_ALL_PACKAGES := $(shell dh_listpackages)
+DEB_SOURCE_PACKAGE := $(shell grep 'Source:' debian/control | sed 's/^Source: \?\(.*\)$$/\1/')
+
+list-missing:
+	@if test -d debian/tmp; then \
+	  (cd debian/tmp && find . -type f -o -type l | grep -v '/DEBIAN/' | sort) > debian/cdbs-install-list; \
+	  (for package in $(DEB_ALL_PACKAGES); do \
+	     (cd debian/$$package && find . -type f -o -type l); \
+	   done; \
+	   test -e debian/not-installed && grep -v '^#' debian/not-installed; \
+	   ) | sort -u > debian/cdbs-package-list; \
+	  diff -u debian/cdbs-install-list debian/cdbs-package-list | sed '1,2d' | egrep '^-' || true; \
+	else \
+	  echo "All files were installed into debian/$(DEB_SOURCE_PACKAGE)."; \
+	fi
+
+.PHONY: list-missing
